cmaple/iptables/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> lines
Rule 1     lines -> line
Rule 2     lines -> line lines
Rule 3     line -> interface_line NL
Rule 4     line -> interface_address NL
Rule 5     line -> variable_line NL
Rule 6     line -> iptables_line NL
Rule 7     line -> table_line NL
Rule 8     line -> chain_line NL
Rule 9     line -> command_line NL
Rule 10    line -> WORD items NL
Rule 11    line -> route_line NL
Rule 12    line -> NL
Rule 13    line -> error NL
Rule 14    empty -> <empty>
Rule 15    items -> item items
Rule 16    items -> item
Rule 17    item -> WORD
Rule 18    item -> NUMBER
Rule 19    item -> COLON
Rule 20    interface_line -> WORD LINK items
Rule 21    interface_address -> INET ADDR COLON IP_ADDR opt_bcast MASK COLON IP_ADDR
Rule 22    opt_bcast -> BCAST COLON IP_ADDR
Rule 23    opt_bcast -> empty
Rule 24    variable_line -> WORD EQ item
Rule 25    variable_line -> WORD EQ error
Rule 26    iptables_line -> IPTABLES opt_table commands
Rule 27    opt_table -> TABLE FILTER
Rule 28    opt_table -> empty
Rule 29    opt_table -> TABLE NAT
Rule 30    opt_table -> TABLE MANGLE
Rule 31    opt_table -> TABLE RAW
Rule 32    opt_table -> TABLE SECURITY
Rule 33    table_line -> STAR FILTER
Rule 34    table_line -> STAR NAT
Rule 35    table_line -> STAR MANGLE
Rule 36    table_line -> STAR RAW
Rule 37    table_line -> STAR SECURITY
Rule 38    chain_line -> COLON chain ACCEPT SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
Rule 39    chain_line -> COLON chain DROP SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
Rule 40    chain_line -> COLON chain WORD SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
Rule 41    command_line -> commands
Rule 42    commands -> append_cmd
Rule 43    commands -> check_cmd
Rule 44    commands -> delete_cmd
Rule 45    commands -> insert_cmd
Rule 46    commands -> replace_cmd
Rule 47    commands -> list_cmd
Rule 48    commands -> list_rules_cmd
Rule 49    commands -> flush_cmd
Rule 50    commands -> zero_cmd
Rule 51    commands -> new_chain_cmd
Rule 52    commands -> delete_chain_cmd
Rule 53    commands -> policy_cmd
Rule 54    commands -> rename_chain_cmd
Rule 55    append_cmd -> APPEND chain rule_spec
Rule 56    check_cmd -> CHECK chain rule_spec
Rule 57    delete_cmd -> DELETE chain rule_spec
Rule 58    delete_cmd -> DELETE chain NUMBER
Rule 59    insert_cmd -> INSERT chain NUMBER rule_spec
Rule 60    insert_cmd -> INSERT chain rule_spec
Rule 61    replace_cmd -> REPLACE chain NUMBER rule_spec
Rule 62    list_cmd -> LIST chain
Rule 63    list_cmd -> LIST
Rule 64    list_rules_cmd -> LIST_RULES chain
Rule 65    list_rules_cmd -> LIST_RULES
Rule 66    flush_cmd -> FLUSH chain
Rule 67    flush_cmd -> FLUSH
Rule 68    zero_cmd -> ZERO chain NUMBER
Rule 69    zero_cmd -> ZERO chain
Rule 70    zero_cmd -> ZERO
Rule 71    new_chain_cmd -> NEW_CHAIN chain
Rule 72    delete_chain_cmd -> DELETE_CHAIN chain
Rule 73    delete_chain_cmd -> DELETE_CHAIN
Rule 74    policy_cmd -> POLICY chain target
Rule 75    rename_chain_cmd -> RENAME_CHAIN chain chain
Rule 76    chain -> WORD
Rule 77    rule_spec -> opt_matches
Rule 78    opt_matches -> opt_match opt_matches
Rule 79    opt_matches -> opt_match
Rule 80    unsupported_option -> WORD unsupported_arguments
Rule 81    unsupported_option -> WORD
Rule 82    unsupported_arguments -> unsupported_arg unsupported_arguments
Rule 83    unsupported_arguments -> unsupported_arg
Rule 84    unsupported_arg -> WORD
Rule 85    unsupported_arg -> NUMBER
Rule 86    unsupported_arg -> COLON
Rule 87    opt_match -> IPV4
Rule 88    opt_match -> IPV6
Rule 89    opt_match -> protocol
Rule 90    opt_match -> ip_source
Rule 91    opt_match -> ip_destination
Rule 92    opt_match -> port_source
Rule 93    opt_match -> port_destination
Rule 94    opt_match -> MATCH items
Rule 95    opt_match -> jump_target
Rule 96    opt_match -> goto_chain
Rule 97    opt_match -> in_interface
Rule 98    opt_match -> out_interface
Rule 99    opt_match -> state_option
Rule 100   opt_match -> error
Rule 101   protocol -> PROTOCOL item
Rule 102   protocol -> BANG PROTOCOL item
Rule 103   ip_source -> IP_SOURCE ip_addr_list
Rule 104   ip_source -> BANG IP_SOURCE ip_addr_list
Rule 105   ip_destination -> IP_DESTINATION ip_addr_list
Rule 106   ip_destination -> BANG IP_DESTINATION ip_addr_list
Rule 107   ip_addr_list -> ip_addr COMMA ip_addr_list
Rule 108   ip_addr_list -> ip_addr
Rule 109   ip_addr -> IP_ADDR
Rule 110   ip_addr -> IP_ADDR SLASH NUMBER
Rule 111   ip_addr -> IP_ADDR SLASH IP_ADDR
Rule 112   port_source -> PORT_SOURCE port_list
Rule 113   port_source -> BANG PORT_SOURCE port_list
Rule 114   port_destination -> PORT_DESTINATION port_list
Rule 115   port_destination -> BANG PORT_DESTINATION port_list
Rule 116   port_list -> item COLON item
Rule 117   port_list -> item COMMA port_list
Rule 118   port_list -> item
Rule 119   jump_target -> JUMP target
Rule 120   goto_chain -> GOTO chain
Rule 121   in_interface -> IN_INTERFACE WORD
Rule 122   out_interface -> OUT_INTERFACE WORD
Rule 123   state_option -> STATE state_arg
Rule 124   state_arg -> WORD
Rule 125   state_arg -> WORD COMMA state_arg
Rule 126   target -> ACCEPT
Rule 127   target -> DROP
Rule 128   target -> QUEUE
Rule 129   target -> RETURN
Rule 130   target -> WORD
Rule 131   route_line -> DEFAULT VIA IP_ADDR DEV WORD
Rule 132   route_line -> IP_ADDR SLASH NUMBER VIA IP_ADDR DEV WORD
Rule 133   route_line -> IP_ADDR SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR
Rule 134   route_line -> IP_ADDR SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR WORD NUMBER

Terminals, with rules where they appear

ACCEPT               : 38 126
ADDR                 : 21
APPEND               : 55
BANG                 : 102 104 106 113 115
BCAST                : 22
CHECK                : 56
COLON                : 19 21 21 22 38 38 39 39 40 40 86 116
COMMA                : 107 117 125
DEFAULT              : 131
DELETE               : 57 58
DELETE_CHAIN         : 72 73
DEV                  : 131 132 133 134
DROP                 : 39 127
EQ                   : 24 25
FILTER               : 27 33
FLUSH                : 66 67
GOTO                 : 120
INET                 : 21
INSERT               : 59 60
IN_INTERFACE         : 121
IPTABLES             : 26
IPV4                 : 87
IPV6                 : 88
IP_ADDR              : 21 21 22 109 110 111 111 131 132 132 133 133 134 134
IP_DESTINATION       : 105 106
IP_SOURCE            : 103 104
JUMP                 : 119
LINK                 : 20 133 134
LIST                 : 62 63
LIST_RULES           : 64 65
MANGLE               : 30 35
MASK                 : 21
MATCH                : 94
NAT                  : 29 34
NEW_CHAIN            : 71
NL                   : 3 4 5 6 7 8 9 10 11 12 13
NUMBER               : 18 38 38 39 39 40 40 58 59 61 68 85 110 132 133 134 134
OUT_INTERFACE        : 122
POLICY               : 74
PORT_DESTINATION     : 114 115
PORT_SOURCE          : 112 113
PROTOCOL             : 101 102
QUEUE                : 128
RAW                  : 31 36
RENAME_CHAIN         : 75
REPLACE              : 61
RETURN               : 129
SECURITY             : 32 37
SLASH                : 110 111 132 133 134
SQUARE_BRACKET       : 38 38 39 39 40 40
SRC                  : 133 134
STAR                 : 33 34 35 36 37
STATE                : 123
TABLE                : 27 29 30 31 32
VIA                  : 131 132
WORD                 : 10 17 20 24 25 40 76 80 81 84 121 122 124 125 130 131 132 133 133 133 133 134 134 134 134 134
WS                   : 
ZERO                 : 68 69 70
error                : 13 25 100

Nonterminals, with rules where they appear

append_cmd           : 42
chain                : 38 39 40 55 56 57 58 59 60 61 62 64 66 68 69 71 72 74 75 75 120
chain_line           : 8
check_cmd            : 43
command_line         : 9
commands             : 26 41
delete_chain_cmd     : 52
delete_cmd           : 44
empty                : 23 28
flush_cmd            : 49
goto_chain           : 96
in_interface         : 97
insert_cmd           : 45
interface_address    : 4
interface_line       : 3
ip_addr              : 107 108
ip_addr_list         : 103 104 105 106 107
ip_destination       : 91
ip_source            : 90
iptables_line        : 6
item                 : 15 16 24 101 102 116 116 117 118
items                : 10 15 20 94
jump_target          : 95
line                 : 1 2
lines                : 2 0
list_cmd             : 47
list_rules_cmd       : 48
new_chain_cmd        : 51
opt_bcast            : 21
opt_match            : 78 79
opt_matches          : 77 78
opt_table            : 26
out_interface        : 98
policy_cmd           : 53
port_destination     : 93
port_list            : 112 113 114 115 117
port_source          : 92
protocol             : 89
rename_chain_cmd     : 54
replace_cmd          : 46
route_line           : 11
rule_spec            : 55 56 57 59 60 61
state_arg            : 123 125
state_option         : 99
table_line           : 7
target               : 74 119
unsupported_arg      : 82 83
unsupported_arguments : 80 82
unsupported_option   : 
variable_line        : 5
zero_cmd             : 50

Parsing method: LALR

state 0

    (0) S' -> . lines
    (1) lines -> . line
    (2) lines -> . line lines
    (3) line -> . interface_line NL
    (4) line -> . interface_address NL
    (5) line -> . variable_line NL
    (6) line -> . iptables_line NL
    (7) line -> . table_line NL
    (8) line -> . chain_line NL
    (9) line -> . command_line NL
    (10) line -> . WORD items NL
    (11) line -> . route_line NL
    (12) line -> . NL
    (13) line -> . error NL
    (20) interface_line -> . WORD LINK items
    (21) interface_address -> . INET ADDR COLON IP_ADDR opt_bcast MASK COLON IP_ADDR
    (24) variable_line -> . WORD EQ item
    (25) variable_line -> . WORD EQ error
    (26) iptables_line -> . IPTABLES opt_table commands
    (33) table_line -> . STAR FILTER
    (34) table_line -> . STAR NAT
    (35) table_line -> . STAR MANGLE
    (36) table_line -> . STAR RAW
    (37) table_line -> . STAR SECURITY
    (38) chain_line -> . COLON chain ACCEPT SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (39) chain_line -> . COLON chain DROP SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (40) chain_line -> . COLON chain WORD SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (41) command_line -> . commands
    (131) route_line -> . DEFAULT VIA IP_ADDR DEV WORD
    (132) route_line -> . IP_ADDR SLASH NUMBER VIA IP_ADDR DEV WORD
    (133) route_line -> . IP_ADDR SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR
    (134) route_line -> . IP_ADDR SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR WORD NUMBER
    (42) commands -> . append_cmd
    (43) commands -> . check_cmd
    (44) commands -> . delete_cmd
    (45) commands -> . insert_cmd
    (46) commands -> . replace_cmd
    (47) commands -> . list_cmd
    (48) commands -> . list_rules_cmd
    (49) commands -> . flush_cmd
    (50) commands -> . zero_cmd
    (51) commands -> . new_chain_cmd
    (52) commands -> . delete_chain_cmd
    (53) commands -> . policy_cmd
    (54) commands -> . rename_chain_cmd
    (55) append_cmd -> . APPEND chain rule_spec
    (56) check_cmd -> . CHECK chain rule_spec
    (57) delete_cmd -> . DELETE chain rule_spec
    (58) delete_cmd -> . DELETE chain NUMBER
    (59) insert_cmd -> . INSERT chain NUMBER rule_spec
    (60) insert_cmd -> . INSERT chain rule_spec
    (61) replace_cmd -> . REPLACE chain NUMBER rule_spec
    (62) list_cmd -> . LIST chain
    (63) list_cmd -> . LIST
    (64) list_rules_cmd -> . LIST_RULES chain
    (65) list_rules_cmd -> . LIST_RULES
    (66) flush_cmd -> . FLUSH chain
    (67) flush_cmd -> . FLUSH
    (68) zero_cmd -> . ZERO chain NUMBER
    (69) zero_cmd -> . ZERO chain
    (70) zero_cmd -> . ZERO
    (71) new_chain_cmd -> . NEW_CHAIN chain
    (72) delete_chain_cmd -> . DELETE_CHAIN chain
    (73) delete_chain_cmd -> . DELETE_CHAIN
    (74) policy_cmd -> . POLICY chain target
    (75) rename_chain_cmd -> . RENAME_CHAIN chain chain

    WORD            shift and go to state 11
    NL              shift and go to state 4
    error           shift and go to state 13
    INET            shift and go to state 14
    IPTABLES        shift and go to state 17
    STAR            shift and go to state 19
    COLON           shift and go to state 15
    DEFAULT         shift and go to state 20
    IP_ADDR         shift and go to state 16
    APPEND          shift and go to state 34
    CHECK           shift and go to state 35
    DELETE          shift and go to state 36
    INSERT          shift and go to state 37
    REPLACE         shift and go to state 38
    LIST            shift and go to state 39
    LIST_RULES      shift and go to state 40
    FLUSH           shift and go to state 41
    ZERO            shift and go to state 42
    NEW_CHAIN       shift and go to state 43
    DELETE_CHAIN    shift and go to state 44
    POLICY          shift and go to state 45
    RENAME_CHAIN    shift and go to state 46

    lines                          shift and go to state 1
    line                           shift and go to state 2
    interface_line                 shift and go to state 3
    interface_address              shift and go to state 5
    variable_line                  shift and go to state 6
    iptables_line                  shift and go to state 7
    table_line                     shift and go to state 8
    chain_line                     shift and go to state 9
    command_line                   shift and go to state 10
    route_line                     shift and go to state 12
    commands                       shift and go to state 18
    append_cmd                     shift and go to state 21
    check_cmd                      shift and go to state 22
    delete_cmd                     shift and go to state 23
    insert_cmd                     shift and go to state 24
    replace_cmd                    shift and go to state 25
    list_cmd                       shift and go to state 26
    list_rules_cmd                 shift and go to state 27
    flush_cmd                      shift and go to state 28
    zero_cmd                       shift and go to state 29
    new_chain_cmd                  shift and go to state 30
    delete_chain_cmd               shift and go to state 31
    policy_cmd                     shift and go to state 32
    rename_chain_cmd               shift and go to state 33

state 1

    (0) S' -> lines .



state 2

    (1) lines -> line .
    (2) lines -> line . lines
    (1) lines -> . line
    (2) lines -> . line lines
    (3) line -> . interface_line NL
    (4) line -> . interface_address NL
    (5) line -> . variable_line NL
    (6) line -> . iptables_line NL
    (7) line -> . table_line NL
    (8) line -> . chain_line NL
    (9) line -> . command_line NL
    (10) line -> . WORD items NL
    (11) line -> . route_line NL
    (12) line -> . NL
    (13) line -> . error NL
    (20) interface_line -> . WORD LINK items
    (21) interface_address -> . INET ADDR COLON IP_ADDR opt_bcast MASK COLON IP_ADDR
    (24) variable_line -> . WORD EQ item
    (25) variable_line -> . WORD EQ error
    (26) iptables_line -> . IPTABLES opt_table commands
    (33) table_line -> . STAR FILTER
    (34) table_line -> . STAR NAT
    (35) table_line -> . STAR MANGLE
    (36) table_line -> . STAR RAW
    (37) table_line -> . STAR SECURITY
    (38) chain_line -> . COLON chain ACCEPT SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (39) chain_line -> . COLON chain DROP SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (40) chain_line -> . COLON chain WORD SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (41) command_line -> . commands
    (131) route_line -> . DEFAULT VIA IP_ADDR DEV WORD
    (132) route_line -> . IP_ADDR SLASH NUMBER VIA IP_ADDR DEV WORD
    (133) route_line -> . IP_ADDR SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR
    (134) route_line -> . IP_ADDR SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR WORD NUMBER
    (42) commands -> . append_cmd
    (43) commands -> . check_cmd
    (44) commands -> . delete_cmd
    (45) commands -> . insert_cmd
    (46) commands -> . replace_cmd
    (47) commands -> . list_cmd
    (48) commands -> . list_rules_cmd
    (49) commands -> . flush_cmd
    (50) commands -> . zero_cmd
    (51) commands -> . new_chain_cmd
    (52) commands -> . delete_chain_cmd
    (53) commands -> . policy_cmd
    (54) commands -> . rename_chain_cmd
    (55) append_cmd -> . APPEND chain rule_spec
    (56) check_cmd -> . CHECK chain rule_spec
    (57) delete_cmd -> . DELETE chain rule_spec
    (58) delete_cmd -> . DELETE chain NUMBER
    (59) insert_cmd -> . INSERT chain NUMBER rule_spec
    (60) insert_cmd -> . INSERT chain rule_spec
    (61) replace_cmd -> . REPLACE chain NUMBER rule_spec
    (62) list_cmd -> . LIST chain
    (63) list_cmd -> . LIST
    (64) list_rules_cmd -> . LIST_RULES chain
    (65) list_rules_cmd -> . LIST_RULES
    (66) flush_cmd -> . FLUSH chain
    (67) flush_cmd -> . FLUSH
    (68) zero_cmd -> . ZERO chain NUMBER
    (69) zero_cmd -> . ZERO chain
    (70) zero_cmd -> . ZERO
    (71) new_chain_cmd -> . NEW_CHAIN chain
    (72) delete_chain_cmd -> . DELETE_CHAIN chain
    (73) delete_chain_cmd -> . DELETE_CHAIN
    (74) policy_cmd -> . POLICY chain target
    (75) rename_chain_cmd -> . RENAME_CHAIN chain chain

    $end            reduce using rule 1 (lines -> line .)
    WORD            shift and go to state 11
    NL              shift and go to state 4
    error           shift and go to state 13
    INET            shift and go to state 14
    IPTABLES        shift and go to state 17
    STAR            shift and go to state 19
    COLON           shift and go to state 15
    DEFAULT         shift and go to state 20
    IP_ADDR         shift and go to state 16
    APPEND          shift and go to state 34
    CHECK           shift and go to state 35
    DELETE          shift and go to state 36
    INSERT          shift and go to state 37
    REPLACE         shift and go to state 38
    LIST            shift and go to state 39
    LIST_RULES      shift and go to state 40
    FLUSH           shift and go to state 41
    ZERO            shift and go to state 42
    NEW_CHAIN       shift and go to state 43
    DELETE_CHAIN    shift and go to state 44
    POLICY          shift and go to state 45
    RENAME_CHAIN    shift and go to state 46

    line                           shift and go to state 2
    lines                          shift and go to state 47
    interface_line                 shift and go to state 3
    interface_address              shift and go to state 5
    variable_line                  shift and go to state 6
    iptables_line                  shift and go to state 7
    table_line                     shift and go to state 8
    chain_line                     shift and go to state 9
    command_line                   shift and go to state 10
    route_line                     shift and go to state 12
    commands                       shift and go to state 18
    append_cmd                     shift and go to state 21
    check_cmd                      shift and go to state 22
    delete_cmd                     shift and go to state 23
    insert_cmd                     shift and go to state 24
    replace_cmd                    shift and go to state 25
    list_cmd                       shift and go to state 26
    list_rules_cmd                 shift and go to state 27
    flush_cmd                      shift and go to state 28
    zero_cmd                       shift and go to state 29
    new_chain_cmd                  shift and go to state 30
    delete_chain_cmd               shift and go to state 31
    policy_cmd                     shift and go to state 32
    rename_chain_cmd               shift and go to state 33

state 3

    (3) line -> interface_line . NL

    NL              shift and go to state 48


state 4

    (12) line -> NL .

    WORD            reduce using rule 12 (line -> NL .)
    NL              reduce using rule 12 (line -> NL .)
    error           reduce using rule 12 (line -> NL .)
    INET            reduce using rule 12 (line -> NL .)
    IPTABLES        reduce using rule 12 (line -> NL .)
    STAR            reduce using rule 12 (line -> NL .)
    COLON           reduce using rule 12 (line -> NL .)
    DEFAULT         reduce using rule 12 (line -> NL .)
    IP_ADDR         reduce using rule 12 (line -> NL .)
    APPEND          reduce using rule 12 (line -> NL .)
    CHECK           reduce using rule 12 (line -> NL .)
    DELETE          reduce using rule 12 (line -> NL .)
    INSERT          reduce using rule 12 (line -> NL .)
    REPLACE         reduce using rule 12 (line -> NL .)
    LIST            reduce using rule 12 (line -> NL .)
    LIST_RULES      reduce using rule 12 (line -> NL .)
    FLUSH           reduce using rule 12 (line -> NL .)
    ZERO            reduce using rule 12 (line -> NL .)
    NEW_CHAIN       reduce using rule 12 (line -> NL .)
    DELETE_CHAIN    reduce using rule 12 (line -> NL .)
    POLICY          reduce using rule 12 (line -> NL .)
    RENAME_CHAIN    reduce using rule 12 (line -> NL .)
    $end            reduce using rule 12 (line -> NL .)


state 5

    (4) line -> interface_address . NL

    NL              shift and go to state 49


state 6

    (5) line -> variable_line . NL

    NL              shift and go to state 50


state 7

    (6) line -> iptables_line . NL

    NL              shift and go to state 51


state 8

    (7) line -> table_line . NL

    NL              shift and go to state 52


state 9

    (8) line -> chain_line . NL

    NL              shift and go to state 53


state 10

    (9) line -> command_line . NL

    NL              shift and go to state 54


state 11

    (10) line -> WORD . items NL
    (20) interface_line -> WORD . LINK items
    (24) variable_line -> WORD . EQ item
    (25) variable_line -> WORD . EQ error
    (15) items -> . item items
    (16) items -> . item
    (17) item -> . WORD
    (18) item -> . NUMBER
    (19) item -> . COLON

    LINK            shift and go to state 57
    EQ              shift and go to state 58
    WORD            shift and go to state 55
    NUMBER          shift and go to state 60
    COLON           shift and go to state 61

    items                          shift and go to state 56
    item                           shift and go to state 59

state 12

    (11) line -> route_line . NL

    NL              shift and go to state 62


state 13

    (13) line -> error . NL

    NL              shift and go to state 63


state 14

    (21) interface_address -> INET . ADDR COLON IP_ADDR opt_bcast MASK COLON IP_ADDR

    ADDR            shift and go to state 64


state 15

    (38) chain_line -> COLON . chain ACCEPT SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (39) chain_line -> COLON . chain DROP SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (40) chain_line -> COLON . chain WORD SQUARE_BRACKET NUMBER COLON NUMBER SQUARE_BRACKET
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 65

state 16

    (132) route_line -> IP_ADDR . SLASH NUMBER VIA IP_ADDR DEV WORD
    (133) route_line -> IP_ADDR . SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR
    (134) route_line -> IP_ADDR . SLASH NUMBER DEV WORD WORD WORD WORD LINK SRC IP_ADDR WORD NUMBER

    SLASH           shift and go to state 67


state 17

    (26) iptables_line -> IPTABLES . opt_table commands
    (27) opt_table -> . TABLE FILTER
    (28) opt_table -> . empty
    (29) opt_table -> . TABLE NAT
    (30) opt_table -> . TABLE MANGLE
    (31) opt_table -> . TABLE RAW
    (32) opt_table -> . TABLE SECURITY
    (14) empty -> .

    TABLE           shift and go to state 69
    APPEND          reduce using rule 14 (empty -> .)
    CHECK           reduce using rule 14 (empty -> .)
    DELETE          reduce using rule 14 (empty -> .)
    INSERT          reduce using rule 14 (empty -> .)
    REPLACE         reduce using rule 14 (empty -> .)
    LIST            reduce using rule 14 (empty -> .)
    LIST_RULES      reduce using rule 14 (empty -> .)
    FLUSH           reduce using rule 14 (empty -> .)
    ZERO            reduce using rule 14 (empty -> .)
    NEW_CHAIN       reduce using rule 14 (empty -> .)
    DELETE_CHAIN    reduce using rule 14 (empty -> .)
    POLICY          reduce using rule 14 (empty -> .)
    RENAME_CHAIN    reduce using rule 14 (empty -> .)

    opt_table                      shift and go to state 68
    empty                          shift and go to state 70

state 18

    (41) command_line -> commands .

    NL              reduce using rule 41 (command_line -> commands .)


state 19

    (33) table_line -> STAR . FILTER
    (34) table_line -> STAR . NAT
    (35) table_line -> STAR . MANGLE
    (36) table_line -> STAR . RAW
    (37) table_line -> STAR . SECURITY

    FILTER          shift and go to state 71
    NAT             shift and go to state 72
    MANGLE          shift and go to state 73
    RAW             shift and go to state 74
    SECURITY        shift and go to state 75


state 20

    (131) route_line -> DEFAULT . VIA IP_ADDR DEV WORD

    VIA             shift and go to state 76


state 21

    (42) commands -> append_cmd .

    NL              reduce using rule 42 (commands -> append_cmd .)


state 22

    (43) commands -> check_cmd .

    NL              reduce using rule 43 (commands -> check_cmd .)


state 23

    (44) commands -> delete_cmd .

    NL              reduce using rule 44 (commands -> delete_cmd .)


state 24

    (45) commands -> insert_cmd .

    NL              reduce using rule 45 (commands -> insert_cmd .)


state 25

    (46) commands -> replace_cmd .

    NL              reduce using rule 46 (commands -> replace_cmd .)


state 26

    (47) commands -> list_cmd .

    NL              reduce using rule 47 (commands -> list_cmd .)


state 27

    (48) commands -> list_rules_cmd .

    NL              reduce using rule 48 (commands -> list_rules_cmd .)


state 28

    (49) commands -> flush_cmd .

    NL              reduce using rule 49 (commands -> flush_cmd .)


state 29

    (50) commands -> zero_cmd .

    NL              reduce using rule 50 (commands -> zero_cmd .)


state 30

    (51) commands -> new_chain_cmd .

    NL              reduce using rule 51 (commands -> new_chain_cmd .)


state 31

    (52) commands -> delete_chain_cmd .

    NL              reduce using rule 52 (commands -> delete_chain_cmd .)


state 32

    (53) commands -> policy_cmd .

    NL              reduce using rule 53 (commands -> policy_cmd .)


state 33

    (54) commands -> rename_chain_cmd .

    NL              reduce using rule 54 (commands -> rename_chain_cmd .)


state 34

    (55) append_cmd -> APPEND . chain rule_spec
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 77

state 35

    (56) check_cmd -> CHECK . chain rule_spec
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 78

state 36

    (57) delete_cmd -> DELETE . chain rule_spec
    (58) delete_cmd -> DELETE . chain NUMBER
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 79

state 37

    (59) insert_cmd -> INSERT . chain NUMBER rule_spec
    (60) insert_cmd -> INSERT . chain rule_spec
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 80

state 38

    (61) replace_cmd -> REPLACE . chain NUMBER rule_spec
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 81

state 39

    (62) list_cmd -> LIST . chain
    (63) list_cmd -> LIST .
    (76) chain -> . WORD

    NL              reduce using rule 63 (list_cmd -> LIST .)
    WORD            shift and go to state 66

    chain                          shift and go to state 82

state 40

    (64) list_rules_cmd -> LIST_RULES . chain
    (65) list_rules_cmd -> LIST_RULES .
    (76) chain -> . WORD

    NL              reduce using rule 65 (list_rules_cmd -> LIST_RULES .)
    WORD            shift and go to state 66

    chain                          shift and go to state 83

state 41

    (66) flush_cmd -> FLUSH . chain
    (67) flush_cmd -> FLUSH .
    (76) chain -> . WORD

    NL              reduce using rule 67 (flush_cmd -> FLUSH .)
    WORD            shift and go to state 66

    chain                          shift and go to state 84

state 42

    (68) zero_cmd -> ZERO . chain NUMBER
    (69) zero_cmd -> ZERO . chain
    (70) zero_cmd -> ZERO .
    (76) chain -> . WORD

    NL              reduce using rule 70 (zero_cmd -> ZERO .)
    WORD            shift and go to state 66

    chain                          shift and go to state 85

state 43

    (71) new_chain_cmd -> NEW_CHAIN . chain
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 86

state 44

    (72) delete_chain_cmd -> DELETE_CHAIN . chain
    (73) delete_chain_cmd -> DELETE_CHAIN .
    (76) chain -> . WORD

    NL              reduce using rule 73 (delete_chain_cmd -> DELETE_CHAIN .)
    WORD            shift and go to state 66

    chain                          shift and go to state 87

state 45

    (74) policy_cmd -> POLICY . chain target
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 88

state 46

    (75) rename_chain_cmd -> RENAME_CHAIN . chain chain
    (76) chain -> . WORD

    WORD            shift and go to state 66

    chain                          shift and go to state 89

state 47

    (2) lines -> line lines .

    $end            reduce using rule 2 (lines -> line lines .)


state 48

    (3) line -> interface_line NL .

    WORD            reduce using rule 3 (line -> interface_line NL .)
    NL              reduce using rule 3 (line -> interface_line NL .)
    error           reduce using rule 3 (line -> interface_line NL .)
    INET            reduce using rule 3 (line -> interface_line NL .)
    IPTABLES        reduce using rule 3 (line -> interface_line NL .)
    STAR            reduce using rule 3 (line -> interface_line NL .)
    COLON           reduce using rule 3 (line -> interface_line NL .)
    DEFAULT         reduce using rule 3 (line -> interface_line NL .)
    IP_ADDR         reduce using rule 3 (line -> interface_line NL .)
    APPEND          reduce using rule 3 (line -> interface_line NL .)
    CHECK           reduce using rule 3 (line -> interface_line NL .)
    DELETE          reduce using rule 3 (line -> interface_line NL .)
    INSERT          reduce using rule 3 (line -> interface_line NL .)
    REPLACE         reduce using rule 3 (line -> interface_line NL .)
    LIST            reduce using rule 3 (line -> interface_line NL .)
    LIST_RULES      reduce using rule 3 (line -> interface_line NL .)
    FLUSH           reduce using rule 3 (line -> interface_line NL .)
    ZERO            reduce using rule 3 (line -> interface_line NL .)
    NEW_CHAIN       reduce using rule 3 (line -> interface_line NL .)
    DELETE_CHAIN    reduce using rule 3 (line -> interface_line NL .)
    POLICY          reduce using rule 3 (line -> interface_line NL .)
    RENAME_CHAIN    reduce using rule 3 (line -> interface_line NL .)
    $end            reduce using rule 3 (line -> interface_line NL .)


state 49

    (4) line -> interface_address NL .

    WORD            reduce using rule 4 (line -> interface_address NL .)
    NL              reduce using rule 4 (line -> interface_address NL .)
    error           reduce using rule 4 (line -> interface_address NL .)
    INET            reduce using rule 4 (line -> interface_address NL .)
    IPTABLES        reduce using rule 4 (line -> interface_address NL .)
    STAR            reduce using rule 4 (line -> interface_address NL .)
    COLON           reduce using rule 4 (line -> interface_address NL .)
    DEFAULT         reduce using rule 4 (line -> interface_address NL .)
    IP_ADDR         reduce using rule 4 (line -> interface_address NL .)
    APPEND          reduce using rule 4 (line -> interface_address NL .)
    CHECK           reduce using rule 4 (line -> interface_address NL .)
    DELETE          reduce using rule 4 (line -> interface_address NL .)
    INSERT          reduce using rule 4 (line -> interface_address NL .)
    REPLACE         reduce using rule 4 (line -> interface_address NL .)
    LIST            reduce using rule 4 (line -> interface_address NL .)
    LIST_RULES      reduce using rule 4 (line -> interface_address NL .)
    FLUSH           reduce using rule 4 (line -> interface_address NL .)
    ZERO            reduce using rule 4 (line -> interface_address NL .)
    NEW_CHAIN       reduce using rule 4 (line -> interface_address NL .)
    DELETE_CHAIN    reduce using rule 4 (line -> interface_address NL .)
    POLICY          reduce using rule 4 (line -> interface_address NL .)
    RENAME_CHAIN    reduce using rule 4 (line -> interface_address NL .)
    $end            reduce using rule 4 (line -> interface_address NL .)


state 50

    (5) line -> variable_line NL .
